# razor-arm

./: .gitignore  .gitmodules  README.md  platformio.ini
armcode/: README.md  armCodeInfo.md  commands.txt
armcode/src/: Joint_control.txt  RobotArmController.cpp  RobotArmController.h  main.cpp  razor_robotics.c
hostcode/: CMakeLists.txt  README.md  gl_debug.hpp  main.cpp
